syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.DSCA";
option java_outer_classname = "transportPollutionServiceImpl";

service transportPollutionService{

	//Server Streaming
	rpc railPollution(railMessage) returns (stream railResponse) {}
	//Client Streaming
	rpc carPollution(stream carMessage) returns (carResponse) {}
	//BidiectionalStreamin
	rpc busPollution(stream busMessage) returns (stream busResponse){}
}

message railMessage{

	double distanceRail = 1;
}

message railResponse{

	double emissions = 1;
	string message = 2;
}

message carMessage{

	double distanceTravelled = 1;

}

message carResponse{

	double emissions = 1;
}

message busMessage{

	double distance = 1;
	string message =2;
}

message busResponse{

	string message = 1;
	double emissions =2;
}